--- a/client/views/aboutUs/aboutUs-body/aboutUs-contact.ejs
+++ b/client/views/aboutUs/aboutUs-body/aboutUs-contact.ejs
@@ -1,13 +1,11 @@
-<div class="gird">
-    <div class="row-contact">
-        <div class="">
-            <div class="card-contact">
-                <div class="card-contact-title">
-                    Please contact us immediately for detailed advice or information support about the product you are interested in
-                </div>
-                <div class="card-copntacct-btn">
-                    <a href="/contact" class="btn-contact">Contact</a>
-                </div>
+<div class="about-us-contact">
+    <div class="contact">
+        <div class="card-contact">
+            <div class="card-contact-title">
+                Please contact us immediately for detailed advice or information support about the product you are interested in
+            </div>
+            <div class="card-copntacct-btn">
+                <a href="/contact" class="btn-contact">Contact</a>
             </div>
         </div>
     </div>
