--- a/client/views/aboutUs/aboutUs-body/our-department.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-department.ejs
@@ -1,6 +1,6 @@
-<div class="gird">
+<div class="about-us-department">
     <h1 class="category-aboutUs">OUR DEPARTMENTS</h2>
-    <div class="row-department">
+    <div class="department">
         <div class="card-department">
             <a href="#">
                 <img src="/img/aboutUs/aboutUs-humanResources.png" alt="" class="card-department-img">
