--- a/client/views/aboutUs/aboutUs-body/our-product.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-product.ejs
@@ -1,29 +1,23 @@
-<div class="gird">
+<div class="about-us-product">
     <h1 class="category-aboutUs">OUR PRODUCTS</h2>
-    <div class="row-product">
-        <div class="">
-            <div class="card-product">
-                <a href="#">
-                    <img src="/img/aboutUs/aboutUs-CyberSecu.png" alt="" class="card-product-img">
-                    <div class="card-product-name">CyberSecurity</div>
-                </a>
-            </div>
+    <div class="product">
+        <div class="card-product">
+            <a href="#">
+                <img src="/img/aboutUs/aboutUs-CyberSecu.png" alt="" class="card-product-img">
+                <div class="card-product-name">CyberSecurity</div>
+            </a>
         </div>
-        <div class="">
-            <div class="card-product">
-                <a href="#">
-                    <img src="/img/aboutUs/aboutUs-DT.png" alt="" class="card-product-img">
-                    <div class="card-product-name">Digital Transformation </div>
-                </a>
-            </div>
+        <div class="card-product">
+            <a href="#">
+                <img src="/img/aboutUs/aboutUs-DT.png" alt="" class="card-product-img">
+                <div class="card-product-name">Digital Transformation </div>
+            </a>
         </div>
-        <div class="">
-            <div class="card-product">
-                <a href="#">
-                    <img src="/img/aboutUs/aboutUs-Digital.png" alt="" class="card-product-img">
-                    <div class="card-product-name">Software</div>
-                </a>
-            </div>
+        <div class="card-product">
+            <a href="#">
+                <img src="/img/aboutUs/aboutUs-Digital.png" alt="" class="card-product-img">
+                <div class="card-product-name">Software</div>
+            </a>
         </div>
     </div>
 </div>
