--- a/client/views/common/card-project/card-project.ejs
+++ b/client/views/common/card-project/card-project.ejs
@@ -1,22 +1,22 @@
-<div class="home-project">
-    <div class="home-project-content">
-        <h1 class="project-content-title">FEATURED PROJECTS</h1>
-        <div class="project-content-description">Below are some of the outstanding projects we have worked on</div>
+<div class="card-project">
+    <div class="card-project-content">
+        <h1 class="project-content-title"><%= title %> </h1>
+        <div class="project-content-description"><%= description %> </div>
     </div>
     <div class="projects">
-        <div class="home-project-card">
+        <div class="project-card">
             <a href="#">
                 <div class="project-card-img"><img src="/img/home/demo-home-project.jpg" alt=""></div>
                 <div class="project-card-content">Example</div>
             </a>
         </div>
-        <div class="home-project-card">
+        <div class="project-card">
             <a href="#">
                 <div class="project-card-img"><img src="/img/home/demo-home-project.jpg" alt=""></div>
                 <div class="project-card-content"></div>
             </a>
         </div>
-        <div class="home-project-card">
+        <div class="project-card">
             <a href="#">
                 <div class="project-card-img"><img src="/img/home/demo-home-project.jpg" alt=""></div>
                 <div class="project-card-content"></div>
