--- a/client/views/customer/customer-body/protential-customers.ejs
+++ b/client/views/customer/customer-body/protential-customers.ejs
@@ -1,6 +1,6 @@
-<div class="grid">
+<div class="customers">
     <h1 class="category-cus">PROTENTIAL CUSTOMERS</h1>
-    <div class="row-protential">
+    <div class="protential">
         <% for(let i = 0; i < customers.length; i++) { %>
             <div class="card-customer">
                 <img src="/<%= customers[i].logo %> " alt="" class="card-customer-img">
@@ -9,6 +9,5 @@
                 </div>
             </div>
         <% } %>  
-    
     </div>
 </div>
