--- a/client/views/product-detail/detailProduct-body/detail-descritption.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-descritption.ejs
@@ -1,18 +1,12 @@
-<div class="software-description">
-    <h1 class="softWare-title">WEBSITE  DESIGN</h1>
-    <div class="details">
-        <div class="softWare-title--1">Difference in products ofGPT GROUP</div>
-        <div class="softWare-content">Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin metus, volutpat lacinia arcu nibh vel ante. 
-            Proin dapibus dui eget justo tincidunt eleifend. Mauris porta elementum est. Nullam euismod quis libero sed convallis. 
-            Vestibulum fringilla felis nec turpis aliquam auctor a a lectus. Etiam porttitor at eros vitae posuere. Suspendisse nec mollis dolor, vel cursus leo. 
-            Integer vitae sem vitae leo pretium porta. In consequat magna purus, iaculis rhoncus velit imperdiet sit amet. <br>
-            Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin metus, volutpat lacinia arcu nibh vel ante. 
-            Proin dapibus dui eget justo tincidunt eleifend. Mauris porta elementum est. Nullam euismod quis libero sed convallis. 
-            Vestibulum fringilla felis nec turpis aliquam auctor a a lectus. Etiam porttitor at eros vitae posuere. Suspendisse nec mollis dolor, vel cursus leo. 
-            Integer vitae sem vitae leo pretium porta. In consequat magna purus, iaculis rhoncus velit imperdiet sit amet.
+<div class="product-detail-description">
+    <h1 class="detail-title">WEBSITE  DESIGN</h1>
+    <div class="detail-content">
+        <div class="product-title">Difference in products of GPT GROUP</div>
+        <div class="product-content">
+            <%= description %> 
         </div>
     </div>
-    <div class="softWare-img">
-        <img src="../../../../asset/img/Contact.jpg" alt="" class="img-description">
+    <div class="product-img">
+        <img src="/img/aboutUs/aboutUs-2.png" alt="" class="img-description">
     </div>
 </div>
