--- a/client/views/product-detail/detailProduct-body/detail-makeForU.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-makeForU.ejs
@@ -1,61 +1,13 @@
 <div class="features-function">
-    <h3 class="title-features">What we make for you</h3>
-        <div class="row-software-product">
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
+    <h3 class="title-features">We can support for you</h3>
+    <div class="products">
+        <% utility.forEach(element => { %>
+            <div class="card-prduct">
+                <img src="/img/customer-img-protential.png" alt="" class="card-customer-img">
+                <div class="card-name">
+                    <%= element %>
                 </div>
             </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
+        <% }) %>
+    </div>
 </div>
