--- a/client/public/css/aboutUs/aboutUs-our-leader.css
+++ b/client/public/css/aboutUs/aboutUs-our-leader.css
@@ -1,47 +1,74 @@
-.row-leader{
-    max-width: 1920px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,
-    minmax(430px,1fr));
-    place-items: center center;
+.about-us-leader{
+    text-align: center;
 }
-.card{
-    /* min-width: 425px; */
-    max-width: 425px;
-    height: 620px;
-    max-height: 620px;
-    min-height: 610px;
+
+.category-aboutUs {
+    text-align: center;
+}
+
+.about-us-leader .leaders {
+    display: flex;
+    justify-content: center;
+    flex-flow: wrap;
+}
+.about-us-leader .leaders .card{
+    max-width: 320px;
     background-color: white;
     border-radius: 15px;
     margin: 10px 18px;
 }
-.card-img{
+.about-us-leader .leaders .card-img{
     border-radius: 15px;
-    padding: 7px;
+    padding: 4px;
     width: 100%;
 }
-.card-name{
+.about-us-leader .leaders .card-name{
     display: flex;
     justify-content: center;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
-    font-size: 48px;
-    line-height: 72px;
+    font-size: 32px;
+    line-height: 36px;
 }
-.card-work{
-    margin-bottom: 15px;
+.about-us-leader .leaders .card-work{
     display: flex;
     justify-content: center;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
-    line-height:36px;
+    font-size: 16px;
+    line-height:20px;
 }
-.category-aboutUs .card-description{
-    display: flex;
-    justify-content: center;
-    max-height: 100px;
+.about-us-leader .leaders .card-description{
     padding: 24px;
+    font-size: 16px;
+}
+
+
+@media screen and (max-width: 1420px) {
+    .about-us-leader .leaders .card{
+        max-width: 250px;
+        margin: 12px 8px;
+    }
+
+    .about-us-leader .leaders .card-name {
+        font-size: 24px;
+    }
+
+    .about-us-leader .leaders .card-description{
+        padding: 12px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+
+    .about-us-leader .category-aboutUs {
+        font-size: 32px;
+    }
+
+    .about-us-leader .leaders .card {
+        max-width: 260px;
+        box-sizing: border-box;
+    }
 }
