--- a/client/public/css/aboutUs/aboutUs-our-product.css
+++ b/client/public/css/aboutUs/aboutUs-our-product.css
@@ -1,31 +1,47 @@
-.row-product{
-    max-width: 1920px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,
-    minmax(32%,1fr));
-    place-items: center center;
+.about-us-product {
+    max-width: 1336px;
+    margin:  0 auto;
 }
-.card-product{
-    height: 620px;
-    max-height: 620px;
+.about-us-product .product{
+    display: flex;
+    justify-content: center;
+    flex-flow: wrap;
+}
+.about-us-product .card-product{
     background-color: white;
     border-radius: 15px;
     margin: 10px 15px;
+    width: 360px;
 }
 
-.card-product a {
+.about-us-product .card-product a {
     color: var(--primary-black);
 }
 
-.card-product-img{
+.about-us-product .card-product-img{
     width: 100%;
 }
-.card-product-name{
-    display: flex;
-    justify-content: center;
-    font-family: 'Poppins';
+.about-us-product .card-product-name{
     font-style: normal;
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 72px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 40px;
+    text-align: center;
+    padding: 20px 20px;
+}
+
+@media screen and (max-width: 1120px) {
+    .about-us-product .card-product{
+        width: 260px;
+    }
+
+    .about-us-product .card-product-name {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .about-us-product .category-aboutUs {
+        font-size: 32px;
+    }
 }
