--- a/client/public/css/footer/footer.css
+++ b/client/public/css/footer/footer.css
@@ -22,7 +22,7 @@
 
 @media screen and (max-width: 950px) {
     .footer-info {
-        padding: 31px 20px;
+        padding: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
