--- a/client/views/aboutUs/aboutUs-body/our-leader.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-leader.ejs
@@ -1,6 +1,6 @@
-<div class="gird">
+<div class="about-us-leader">
     <h1 class="category-aboutUs">OUR LEADER</h2>
-    <div class="row-leader">
+    <div class="leaders">
         <% for(let i = 0; i < personnels.length; i++) { %>
             <div class="card">
                 <img src="/<%= personnels[i].img %> " alt="" class="card-img">
