--- a/client/views/common/nav-product/nav-product.ejs
+++ b/client/views/common/nav-product/nav-product.ejs
@@ -1,13 +1,17 @@
 <div class="nav-product">
     <% for(let i = 0; i < categories.length; i++) { %>
         <% if (index - 1 === i) { %>
-            <a href="/product/<%= categories[i].id %>" class="btn-nav-product btn-active">
-                <%= categories[i].name %> 
-            </a>
+            <div class="nav-item btn-active">
+                <a href="/product/<%= categories[i].id %>" class="btn-nav-product">
+                    <%= categories[i].name %> 
+                </a>
+            </div>
         <% } else { %>
-            <a href="/product/<%= categories[i].id %>" class="btn-nav-product">
-                <%= categories[i].name %> 
-            </a>
+            <div class="nav-item">
+                <a href="/product/<%= categories[i].id %>" class="btn-nav-product">
+                    <%= categories[i].name %> 
+                </a>
+            </div>
         <% } %> 
     <% } %>
 </div>
