--- a/client/views/customer/customer-body/featured-partner.ejs
+++ b/client/views/customer/customer-body/featured-partner.ejs
@@ -1,6 +1,6 @@
-<div class="gird">
+<div class="parters">
     <h1 class="category-cus">FEATURED PARTNER</h1>
-    <div class="row-protential">
+    <div class="protential">
         <div class="card-partner">
             <img src="/img/customer-img-partner.png" alt="" class="partner-img">
         </div>
@@ -13,7 +13,5 @@
         <div class="card-partner">
             <img src="/img/customer-img-partner.png" alt="" class="partner-img">
         </div>
-        
-        
     </div>
 </div>
