--- a/client/views/home/home-body/home-body.ejs
+++ b/client/views/home/home-body/home-body.ejs
@@ -3,5 +3,5 @@
     <%- include("./home-des-slogan.ejs") %> 
     <%- include("./home-product.ejs", {categories}) %>
     <%- include("./home-count-up.ejs") %>
-    <%- include("./home-project.ejs") %> 
+    <%- include("../../common/card-project/card-project.ejs", {title: "FEATURED PROJECT", description: "Below are some of the outstanding projects we have worked on"}) %> 
 </div>
