--- a/client/views/product-detail/detailProduct-body/detail-contact.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-contact.ejs
@@ -1,9 +1,9 @@
-<div class="softWare-contact">
+<div class="product-detail-contact">
     <div class="contact-left">
         <div class="start-project">Start your project now </div>
-        <a href="" class="btn-softWare-contact">Contact us</a>
+        <a href="/contact" class="btn-softWare-contact">Contact us</a>
     </div>
-    <div class="contact-fight">
-        <img src="../../../../asset/img/softWare-contact-1.png" alt="" class="img-right">
+    <div class="contact-right">
+        <img src="/img/product-detail-contact.png" alt="" class="img-right">
     </div>
 </div>
