--- a/client/views/product-detail/detailProduct-body/detail-features.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-features.ejs
@@ -1,33 +1,13 @@
 <div class="features-function">
     <h3 class="title-features">Featured Functions</h3>
-        <div class="row-software-product">
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
+    <div class="products">
+        <% for( let i = 0; i < feature.length; i++ ) { %>
+            <div class="card-prduct">
+                <img src="/img/customer-img-protential.png" alt="" class="card-customer-img">
+                <div class="card-name">
+                    <%= feature[i] %> 
                 </div>
             </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <div class="card-prduct-sofrware">
-                    <div class="card-features-name">
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
+        <% } %>
+    </div>
 </div>
