--- a/client/public/css/aboutUs/aboutUs-our-product.css
+++ b/client/public/css/aboutUs/aboutUs-our-product.css
@@ -18,7 +18,7 @@
     color: var(--primary-black);
 }
 
-.about-us-product .card-product-img{
+.about-us-product .card-product-aboutus-img{
     width: 100%;
 }
 .about-us-product .card-product-name{
