--- a/client/views/aboutUs/aboutUs-body/our-product.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-product.ejs
@@ -3,19 +3,19 @@
     <div class="product">
         <div class="card-product">
             <a href="#">
-                <img src="/img/aboutUs/aboutUs-CyberSecu.png" alt="" class="card-product-img">
+                <img src="/img/aboutUs/aboutUs-CyberSecu.png" alt="" class="card-product-aboutus-img">
                 <div class="card-product-name">CyberSecurity</div>
             </a>
         </div>
         <div class="card-product">
             <a href="#">
-                <img src="/img/aboutUs/aboutUs-DT.png" alt="" class="card-product-img">
+                <img src="/img/aboutUs/aboutUs-DT.png" alt="" class="card-product-aboutus-img">
                 <div class="card-product-name">Digital Transformation </div>
             </a>
         </div>
         <div class="card-product">
             <a href="#">
-                <img src="/img/aboutUs/aboutUs-Digital.png" alt="" class="card-product-img">
+                <img src="/img/aboutUs/aboutUs-Digital.png" alt="" class="card-product-aboutus-img">
                 <div class="card-product-name">Software</div>
             </a>
         </div>
