--- a/client/views/contact/index.ejs
+++ b/client/views/contact/index.ejs
@@ -1,11 +1,9 @@
 <%- include('../common/head.ejs', { title: "CONTACT | GPT GROUP", content: "Contacn Information GPT Group", keyword: "contact gpt group, gpt group,gpt"}); -%>
     <%- include('../common/header/header.ejs', {phone, email, linkedin, facebook, instagram}) %> 
     <main id="main">
-        <div class="img-cotainer">
-            <h1 class="title-contain">
-                gpt group / contact
-            </h1>
-        </div>
+        <h1 class="img-contact">
+            GPT GROUP / CONTACT
+        </h1>
         <div class="contact-body">  
             <div class="contact-logo">
                 <img src="/img/logo.png" alt="Logo GPT">
