--- a/client/views/product/product-body/product.ejs
+++ b/client/views/product/product-body/product.ejs
@@ -2,7 +2,7 @@
     <% for(let i = 0; i < products.length; i++) { %>
         <a href='/product/<%= id %>/<%= products[i].id %> %> '>
             <div class="card-prduct">
-                <img src="/img/customer-img-protential.png" alt="" class="card-customer-img">
+                <img src="/img/customer-img-protential.png" class="card-product-img">
                 <div class="card-name">
                     <%= products[i].name %>
                 </div>
