--- a/client/public/css/common/card-product/card-product.css
+++ b/client/public/css/common/card-product/card-product.css
@@ -16,6 +16,10 @@
     
 }
 
+.card-product-img {
+    max-width: 300px;
+}
+
 .card-prduct:hover{
     transform: scale(1.1);
     transition: all ease-in-out 0.4s;
@@ -32,12 +36,17 @@
     justify-content: center;
     align-items: center;
     padding: 20px 16px;
+    height: 100px;
 }
 
 @media screen and (max-width: 1400px) {
     .card-prduct{
         width: 270px;
         margin: 10px;
+    }
+
+    .card-product-img {
+        width: 270px;
     }
 
     .card-name {
@@ -50,6 +59,10 @@
     .card-prduct{
         width: 250px;
         margin: 10px;
+    }
+
+    .card-product-img {
+        max-width: 250px;
     }
 
     .card-prduct:hover {
