--- a/client/public/css/contact/contact.css
+++ b/client/public/css/contact/contact.css
@@ -39,8 +39,8 @@ ul{
 
 }
 .contact-logo img{
-    width: 174px;
-    height: 174px;
+    width: 150px;
+    height: 150px;
 }
 .contact-logo .contact-name{
     font-size: 48px;
@@ -96,14 +96,22 @@ ul{
     justify-content: center;
     flex-flow: wrap;
     column-gap: 150px;
-    
 }
+
+@media screen and (max-width: 1505px) {
+    .contact-info {
+        text-align: center;
+    }
+
+    .contact-social {
+        margin: 0 auto;
+    }
+}
+
 .address-contact span{
     font-size: 16px;
     font-weight: 300;
-line-height: 45px;  
-  
-
+    line-height: 45px;  
 }
 .contact-form input{
     width: 500px;
@@ -114,10 +122,28 @@ line-height: 45px;
     margin: 6px 0;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 550px) {
+    .contact-info {
+        padding: 40px 10px;
+    }
+
+    .contact-form form {
+        align-items: center;
+    }
+
+    .contact-form input{
+        width: 250px;
+    }
+
+    #message {
+        width: 250px;
+    }
+}
+
 .contact-form form{
     display: flex;
     flex-direction: column;
-    
 }
 .contact-form h3{
     color: #fff;
