--- a/client/views/product-detail/detailProduct-body/detail-makeForU.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-makeForU.ejs
@@ -3,7 +3,7 @@
     <div class="products">
         <% utility.forEach(element => { %>
             <div class="card-prduct">
-                <img src="/img/customer-img-protential.png" alt="" class="card-customer-img">
+                <img src="/img/customer-img-protential.png" alt="" class="card-product-img">
                 <div class="card-name">
                     <%= element %>
                 </div>
