--- a/client/views/product-detail/detailProduct-body/detail-descritption.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-descritption.ejs
@@ -1,5 +1,5 @@
 <div class="product-detail-description">
-    <h1 class="detail-title">WEBSITE  DESIGN</h1>
+    <h1 class="detail-title"><%= name %> </h1>
     <div class="detail-content">
         <div class="product-title">Difference in products of GPT GROUP</div>
         <div class="product-content">
