--- a/client/public/css/common/card-product/card-product.css
+++ b/client/public/css/common/card-product/card-product.css
@@ -13,7 +13,7 @@
     background-color: white;
     text-align: center;
     margin: 20px;
-    
+    cursor: pointer;
 }
 
 .card-product-img {
@@ -36,7 +36,6 @@
     justify-content: center;
     align-items: center;
     padding: 20px 16px;
-    height: 100px;
 }
 
 @media screen and (max-width: 1400px) {
