--- a/client/views/product/product-body/product.ejs
+++ b/client/views/product/product-body/product.ejs
@@ -1,7 +1,7 @@
 <div class="products">
     <% for(let i = 0; i < products.length; i++) { %>
         <div class="card-prduct">
-            <a href='/product/<%= id %>/<%= products[i].id %> %> '></a>
+            <a href='/product/<%= id %>/<%= products[i].id %> %> '>
                 <img src="/img/customer-img-protential.png" class="card-product-img">
                 <div class="card-name">
                     <%= products[i].name %>
