--- a/client/views/aboutUs/aboutUs-body/our-product.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-product.ejs
@@ -1,23 +1,13 @@
 <div class="about-us-product">
     <h1 class="category-aboutUs">OUR PRODUCTS</h2>
     <div class="product">
-        <div class="card-product">
-            <a href="#">
-                <img src="/img/aboutUs/aboutUs-CyberSecu.png" alt="" class="card-product-aboutus-img">
-                <div class="card-product-name">CyberSecurity</div>
-            </a>
-        </div>
-        <div class="card-product">
-            <a href="#">
-                <img src="/img/aboutUs/aboutUs-DT.png" alt="" class="card-product-aboutus-img">
-                <div class="card-product-name">Digital Transformation </div>
-            </a>
-        </div>
-        <div class="card-product">
-            <a href="#">
-                <img src="/img/aboutUs/aboutUs-Digital.png" alt="" class="card-product-aboutus-img">
-                <div class="card-product-name">Software</div>
-            </a>
-        </div>
+        <% categories.forEach(category => { %>
+            <div class="card-product">
+                <a href="product/<%= category.id %> ">
+                    <img src="/img/aboutUs/aboutUs-CyberSecu.png" alt="" class="card-product-aboutus-img">
+                    <div class="card-product-name"><%= category.name %> </div>
+                </a>
+            </div>
+        <% }) %>
     </div>
 </div>
