--- a/client/public/css/customer/customer.css
+++ b/client/public/css/customer/customer.css
@@ -53,13 +53,21 @@ body{
     text-align: center;
     padding: 20px 20px;
 }
+
+.partners {
+    max-width: 1420px;
+    margin: 0 auto;
+}
+
 .partner-img{
     width: 330px;
-    height: 160px;
+    border-radius: 12px;
+    vertical-align: middle;
+    height: 200px;
 }
 .card-partner{
     max-width: 330px;
-    height: 160px;
+    height: 200px;
     border-radius: 12px;
     align-items: center;
     background-color: white;
@@ -137,5 +145,9 @@ body{
     .card-partner{
         max-width: 250px;
         height: 150px;
+    }
+
+    .partners {
+        padding-bottom: 20px;
     }
 }
