--- a/client/views/customer/customer-body/customer-body.ejs
+++ b/client/views/customer/customer-body/customer-body.ejs
@@ -1,5 +1,5 @@
 <%- include('./customer-contact-img.ejs') %> 
 <div class="container">
     <%- include('./protential-customers.ejs', customers) %> 
-    <%- include('./featured-partner.ejs') %> 
+    <%- include('./featured-partner.ejs', partners) %> 
 </div>
