--- a/client/public/css/common/card-project/card-project.css
+++ b/client/public/css/common/card-project/card-project.css
@@ -54,22 +54,16 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 80%;
-    background: rgba(0, 0, 0, 0.425);
+    height: 70%;
+    background: rgba(0, 0, 0, 0.548);
     border-radius: 12px;
-    transform-origin: bottom;
-    transform: rotateX(90deg);
     transition: 0.3s;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 600;
     box-sizing: border-box;
     padding: 12px;
     overflow: hidden;
-}
-
-.card-project .project-card:hover .project-card-content{
-    transform: rotateX(0deg);
-
+    text-align: center;
 }
 
 @media screen and (min-width: 1024px) {
@@ -103,6 +97,10 @@
     
     .card-project .project-card img {
         width: 300px;
+    }
+
+    .card-project .project-card .project-card-content {
+        font-size: 16px;
     }
 }
 
