--- a/client/views/home/home-body/home-card-project.ejs
+++ b/client/views/home/home-body/home-card-project.ejs
@@ -4,11 +4,11 @@
         <div class="project-content-description"><%= description %> </div>
     </div>
     <div class="projects">
-        <% products.forEach(product => { %>
+        <% categories.forEach(category => { %>
             <div class="project-card">
-                <a href="/product/<%= product.category.id %>/<%= product.id %>  ">
-                    <div class="project-card-img"><img src="/<%= product.banner %> " alt=""></div>
-                    <div class="project-card-content"><%= product.name %> </div>
+                <a href="/product/<%= category.id %>/<%= category.products[0].id %>  ">
+                    <div class="project-card-img"><img src="/<%= category.products[0].banner %>" alt=""></div>
+                    <div class="project-card-content"><%= category.products[0].name %> </div>
                 </a>
             </div>
         <% }) %>
