--- a/client/views/product-detail/detailProduct-body/detail-features.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-features.ejs
@@ -3,7 +3,7 @@
     <div class="products">
         <% for( let i = 0; i < feature.length; i++ ) { %>
             <div class="card-prduct">
-                <img src="/img/customer-img-protential.png" alt="" class="card-product-img">
+                <img src="/img/project/banner/feature.jpg" alt="" class="card-product-img">
                 <div class="card-name">
                     <%= feature[i] %> 
                 </div>
