--- a/client/views/product-detail/detailProduct-body/detail-similar-project.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-similar-project.ejs
@@ -8,7 +8,7 @@
             <% if (thisProductId != product.id) { %>
                 <div class="project-card">
                     <a href="/product/<%= category.id %>/<%= product.id %>  ">
-                        <div class="project-card-img"><img src="/img/home/demo-home-project.jpg" alt=""></div>
+                        <div class="project-card-img"><img src="/<%= product.banner %> " alt=""></div>
                         <div class="project-card-content"><%= product.name %> </div>
                     </a>
                 </div>
