--- a/client/views/home/home-body/home-card-project.ejs
+++ b/client/views/home/home-body/home-card-project.ejs
@@ -1,7 +1,7 @@
 <div class="card-project">
     <div class="card-project-content">
-        <h1 class="project-content-title"><%= title %> </h1>
-        <div class="project-content-description"><%= description %> </div>
+        <h1 class="project-content-title">FEATURED PROJECT</h1>
+        <div class="project-content-description">Below are some of the outstanding projects we have worked on</div>
     </div>
     <div class="projects">
         <% categories.forEach(category => { %>
