--- a/client/views/home/home-body/home-des-slogan.ejs
+++ b/client/views/home/home-body/home-des-slogan.ejs
@@ -6,8 +6,7 @@
     </div>
     <div class="home-des-content">
         <h1 class="des-slogan-title">MAKE A DIFERENCE</h1>
-        <div class="des-slogan-content">We provide solutions to help your business build an effective digital transformation roadmap,
-            provide enterprise security solutions, and execute software build-out development. And ensure optimal cost matching for your business.</div>
+        <div class="des-slogan-content"><%= slogan %> </div>
         <div class="des-slogan-action btn btn-cta"><a href="#">SEE MORE</a></div>
     </div>
 </div>
