--- a/client/views/home/home-body/home-intro.ejs
+++ b/client/views/home/home-body/home-intro.ejs
@@ -2,7 +2,7 @@
     <div class="intro-info">
         <div class="intro-info-title">GPT GROUP GLOBAL PLATFORM TECHNOLOGY</div>
         <div class="intro-info-description">
-            We create values and sustainable development for your business. Comprehensive from operation to information security in the 4.0 technology era
+            <%= introduction %> 
         </div>
         <div class="intro-info-action">
             <div class="btn btn-cta"><a href="#home-des-slogan">SEE MORE</a></div>
