--- a/client/views/common/head.ejs
+++ b/client/views/common/head.ejs
@@ -7,8 +7,8 @@
     <meta name="description" content="<%= content %> ">
     <meta name="keywords" content="<%= keyword %> ">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="/img/logo/logo_header.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
     <title><%= title %> </title>
 </head>
 <body>
-    
