--- a/client/views/aboutUs/aboutUs-body/aboutUs-body.ejs
+++ b/client/views/aboutUs/aboutUs-body/aboutUs-body.ejs
@@ -3,6 +3,6 @@
     <%- include('./description.ejs', aboutUs) %> 
     <%- include('./our-leader.ejs', personnels) %> 
     <%- include('./our-department.ejs', departments) %> 
-    <%- include('./our-product.ejs', categories) %>  
+    <%- include('./our-product.ejs', products) %>  
     <%- include('./aboutUs-contact.ejs') %>  
 </div>
