--- a/client/views/product-detail/index.ejs
+++ b/client/views/product-detail/index.ejs
@@ -1,4 +1,4 @@
-<%- include('../common/head.ejs', {title: product.name + " | GPT Group", content: product.name + " of GPT Group", keyword: "gpt product, product GPT"})  %>
+<%- include('../common/head.ejs', {title: project.name + " | GPT Group", content: project.name + " of GPT Group", keyword: "gpt product, product GPT"})  %>
     <%- include('../common/header/header.ejs',contact) %>
         <%- include('./detailProduct-body/detail-body.ejs') %> 
     <%- include('../common/footer/footer.ejs',contact) %>
