--- a/client/views/common/nav-product/nav-product.ejs
+++ b/client/views/common/nav-product/nav-product.ejs
@@ -1,15 +1,15 @@
 <div class="nav-product">
-    <% for(let i = 0; i < categories.length; i++) { %>
-        <% if (index - 1 === i) { %>
+    <% for(let i = 0; i < products.length; i++) { %>
+        <% if (index === i) { %>
             <div class="nav-item btn-active">
-                <a href="/product/<%= categories[i].id %>" class="btn-nav-product">
-                    <%= categories[i].name %> 
+                <a href="/product/<%= products[i].id %>" class="btn-nav-product">
+                    <%= products[i].name %> 
                 </a>
             </div>
         <% } else { %>
             <div class="nav-item">
-                <a href="/product/<%= categories[i].id %>" class="btn-nav-product">
-                    <%= categories[i].name %> 
+                <a href="/product/<%= products[i].id %>" class="btn-nav-product">
+                    <%= products[i].name %> 
                 </a>
             </div>
         <% } %> 
