--- a/client/views/home/home-body/home-card-project.ejs
+++ b/client/views/home/home-body/home-card-project.ejs
@@ -4,11 +4,11 @@
         <div class="project-content-description">Below are some of the outstanding projects we have worked on</div>
     </div>
     <div class="projects">
-        <% categories.forEach(category => { %>
+        <% products.forEach(product => { %>
             <div class="project-card">
-                <a href="/product/<%= category.id %>/<%= category.products[0].id %>  ">
-                    <div class="project-card-img"><img src="/<%= category.products[0].banner %>" alt=""></div>
-                    <div class="project-card-content"><%= category.products[0].name %> </div>
+                <a href="/product/<%= product.id %>/<%= product.projects[0].id %>  ">
+                    <div class="project-card-img"><img src="/<%= product.projects[0].banner %>" alt=""></div>
+                    <div class="project-card-content"><%= product.projects[0].name %> </div>
                 </a>
             </div>
         <% }) %>
