--- a/client/views/home/home-body/home-product.ejs
+++ b/client/views/home/home-body/home-product.ejs
@@ -2,13 +2,13 @@
     <h1 class="home-product-title">EXPLORE OUR PRODUCTS</h1>
     <div class="home-product-description">Below are the 3 main product groups that we provide, please read more to understand better</div>
     <div class="products">
-        <% for( let i = 0; i < categories.length; i++ ) { %>
+        <% for( let i = 0; i < products.length; i++ ) { %>
             <div class="card-home-product">
-                <a href="/product/<%= categories[i].id %>">
-                    <div class="card-image"><img src="/<%= categories[i].banner %> " alt="GPT Cyber security"></div>
-                    <div class="card-title"><%= categories[i].name %> </div>
+                <a href="/product/<%= products[i].id %>">
+                    <div class="card-image"><img src="/<%= products[i].banner %> " alt="GPT Cyber security"></div>
+                    <div class="card-title"><%= products[i].name %> </div>
                     <div class="card-description">
-                        <%= categories[i].description %>  
+                        <%= products[i].description %>  
                     </div>
                 </a>
             </div>
