--- a/client/views/product-detail/detailProduct-body/detail-body.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-body.ejs
@@ -1,9 +1,9 @@
 <div class="product-detail-container">
-    <%- include('./detail-img-contact.ejs', product) %>
-    <%- include('../../common/nav-product/nav-product.ejs', {categories, index: product.category.id}) %>
-    <%- include('./detail-descritption.ejs', product) %>   
-    <%- include('./detail-features.ejs', product) %>
+    <%- include('./detail-img-contact.ejs', project) %>
+    <%- include('../../common/nav-product/nav-product.ejs', {products, index}) %>
+    <%- include('./detail-descritption.ejs', project) %>   
+    <%- include('./detail-features.ejs', project) %>
     <%- include('./detail-contact.ejs') %>   
-    <%- include('./detail-makeForU.ejs', product) %>
-    <%- include('./detail-similar-project.ejs', {category, thisProductId: product.id}) %>   
+    <%- include('./detail-makeForU.ejs', project) %>
+    <%- include('./detail-similar-project.ejs', {product: products[index], thisProductId: project.id}) %>   
 </div>
