--- a/client/views/product-detail/detailProduct-body/detail-similar-project.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-similar-project.ejs
@@ -4,12 +4,12 @@
         <div class="project-content-description"> Our similar product </div>
     </div>
     <div class="projects">
-        <% category.products.forEach(product => { %>
+        <% product.projects.forEach(project => { %>
             <% if (thisProductId != product.id) { %>
                 <div class="project-card">
-                    <a href="/product/<%= category.id %>/<%= product.id %>  ">
-                        <div class="project-card-img"><img src="/<%= product.banner %> " alt=""></div>
-                        <div class="project-card-content"><%= product.name %> </div>
+                    <a href="/product/<%= product.id %>/<%= project.id %>  ">
+                        <div class="project-card-img"><img src="/<%= project.banner %> " alt=""></div>
+                        <div class="project-card-content"><%= project.name %> </div>
                     </a>
                 </div>
             <% } %>
