--- a/client/views/product/product-body/product.ejs
+++ b/client/views/product/product-body/product.ejs
@@ -2,7 +2,7 @@
     <% for(let i = 0; i < projects.length; i++) { %>
         <div class="card-prduct">
             <a href='/product/<%= id %>/<%= projects[i].id %> %> '>
-                <img src="/<%= projects[i].banner %> " class="card-product-img">
+                <img src="<%= projects[i].banner %> " class="card-product-img">
                 <div class="card-name">
                     <%= projects[i].name %>
                 </div>
