--- a/client/views/product-detail/detailProduct-body/detail-similar-project.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-similar-project.ejs
@@ -8,7 +8,7 @@
             <% if (thisProductId != product.id) { %>
                 <div class="project-card">
                     <a href="/product/<%= product.id %>/<%= project.id %>  ">
-                        <div class="project-card-img"><img src="/<%= project.banner %> " alt=""></div>
+                        <div class="project-card-img"><img src="<%= project.banner %> " alt=""></div>
                         <div class="project-card-content"><%= project.name %> </div>
                     </a>
                 </div>
