--- a/client/views/home/home-body/home-card-project.ejs
+++ b/client/views/home/home-body/home-card-project.ejs
@@ -7,7 +7,7 @@
         <% products.forEach(product => { %>
             <div class="project-card">
                 <a href="/product/<%= product.id %>/<%= product.projects[0].id %>  ">
-                    <div class="project-card-img"><img src="/<%= product.projects[0].banner %>" alt=""></div>
+                    <div class="project-card-img"><img src="<%= product.projects[0].banner %>" alt=""></div>
                     <div class="project-card-content"><%= product.projects[0].name %> </div>
                 </a>
             </div>
