--- a/client/views/aboutUs/aboutUs-body/our-product.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-product.ejs
@@ -4,7 +4,7 @@
         <% products.forEach(product => { %>
             <div class="card-product">
                 <a href="product/<%= product.id %> ">
-                    <img src="/<%= product.banner %> " class="card-product-aboutus-img">
+                    <img src="<%= product.banner %> " class="card-product-aboutus-img">
                     <div class="card-product-name"><%= product.name %> </div>
                 </a>
             </div>
