--- a/client/views/aboutUs/aboutUs-body/our-department.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-department.ejs
@@ -4,7 +4,7 @@
         <% departments.forEach(department => { %>
             <div class="card-department">
                 <a href="#">
-                    <img src="/<%= department.logo %>" alt="" class="card-department-img">
+                    <img src="<%= department.logo %>" alt="" class="card-department-img">
                     <div class="card-department-name"><%= department.name %> </div>
                     <p class="card-department-desctiption">
                         <%= department.description %>
