--- a/client/public/css/common/card-project/card-project.css
+++ b/client/public/css/common/card-project/card-project.css
@@ -41,12 +41,10 @@
 
 .card-project .project-card {
     position: relative;
-    height: fit-content;
+    /* height: fit-content; */
 }
-
 .card-project .project-card img {
     border-radius: 12px;
-    margin-bottom: 32px;
 }
 
 .card-project .project-card .project-card-content {
@@ -54,14 +52,11 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 70%;
     background: rgba(0, 0, 0, 0.548);
     border-radius: 12px;
-    transition: 0.3s;
     font-size: 20px;
     font-weight: 600;
-    box-sizing: border-box;
-    padding: 12px;
+    padding: 24px;
     overflow: hidden;
     text-align: center;
 }
@@ -74,6 +69,16 @@
     
     .card-project .project-card img {
         width: 360px;
+    }
+
+    .card-project .project-card .project-card-content {
+        transform: rotateX(90deg);
+        transform-origin: bottom;
+        transition: 0.3s;
+    }
+
+    .card-project .project-card:hover .project-card-content {
+        transform: rotateX(0);
     }
 }
 
