--- a/client/views/home/home-body/home-card-project.ejs
+++ b/client/views/home/home-body/home-card-project.ejs
@@ -5,12 +5,14 @@
     </div>
     <div class="projects">
         <% products.forEach(product => { %>
-            <div class="project-card">
-                <a href="/product/<%= product.id %>/<%= product.projects[0].id %>  ">
-                    <div class="project-card-img"><img src="<%= product.projects[0].banner %>" alt=""></div>
-                    <div class="project-card-content"><%= product.projects[0].name %> </div>
-                </a>
-            </div>
+            <% if (product.projects.length > 0) { %>
+                <div class="project-card">
+                    <a href="/product/<%= product.id %>/<%= product.projects[0].id %>  ">
+                        <div class="project-card-img"><img src="<%= product.projects[0].banner %>" alt=""></div>
+                        <div class="project-card-content"><%= product.projects[0].name %> </div>
+                    </a>
+                </div>
+            <% } %>
         <% }) %>
     </div>    
 </div>
