--- a/client/views/product/product-body/product.ejs
+++ b/client/views/product/product-body/product.ejs
@@ -1,12 +1,14 @@
 <div class="products">
-    <% for(let i = 0; i < projects.length; i++) { %>
-        <div class="card-prduct">
-            <a href='/product/<%= id %>/<%= projects[i].id %> %> '>
-                <img src="<%= projects[i].banner %> " class="card-product-img">
-                <div class="card-name">
-                    <%= projects[i].name %>
-                </div>
-            </a>
-        </div>
-    <% } %> 
+    <% if (projects.length > 0) { %>
+        <% for(let i = 0; i < projects.length; i++) { %>
+            <div class="card-prduct">
+                <a href='/product/<%= id %>/<%= projects[i].id %> %> '>
+                    <img src="<%= projects[i].banner %> " class="card-product-img">
+                    <div class="card-name">
+                        <%= projects[i].name %>
+                    </div>
+                </a>
+            </div>
+        <% } %> 
+    <% } %>
 </div>
