--- a/client/views/common/head.ejs
+++ b/client/views/common/head.ejs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="<%= content %> ">
     <meta name="keywords" content="<%= keyword %> ">
+    <meta property="og:title" content="<%= title %> ">
+    <meta property="og:description" content="<%= content %> ">
+    <meta property="og:image" content="/logo.png"> 
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/img/logo/logo_header.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
