--- a/client/views/admin/aboutUs/index.ejs
+++ b/client/views/admin/aboutUs/index.ejs
@@ -5,5 +5,5 @@
             <%- include("./content/index.ejs", {introduction, goals, values}) %> 
         </div> 
     </div>
-    <script src="/javascript/aboutus/index.js"></script>
+    <script src="/javascript/admin/index.js"></script>
 <%- include("../tail/tail.ejs") %>  
