--- a/client/views/admin/home/content/index.ejs
+++ b/client/views/admin/home/content/index.ejs
@@ -1,4 +1,4 @@
-<div id="content-home" class="col-md-5">
+<div id="content-home" class="col-sm-8 col-lg-10">
     <h2>Edit content Home page</h2>
     <form action="/admin/home" method="post">
         <div class="mb-3">
