--- a/client/views/admin/aboutUs/content/index.ejs
+++ b/client/views/admin/aboutUs/content/index.ejs
@@ -1,4 +1,4 @@
-<div id="content-home" class="col-md-5">
+<div id="content-about-us" class="col-sm-8 col-lg-10">
     <h2>Edit content About Us Pag </h2>
     <form action="/admin/aboutus" method="post">
         <div class="mb-3">
