--- a/client/views/admin/common/menu/index.ejs
+++ b/client/views/admin/common/menu/index.ejs
@@ -1,4 +1,6 @@
-<div id="admin-menu" class="col-sm-4 col-lg-2">
-    <a href="#" class="link nav-link"><h3> GPT ADMIN</h3></a>
-    <%- include("./list.ejs") %> 
+<div id="menu-container" class="col-sm-4 col-lg-2">
+    <div id="admin-menu">
+        <a href="#" class="link nav-link"><h3> GPT ADMIN</h3></a>
+        <%- include("./list.ejs") %> 
+    </div>
 </div>
