--- a/client/views/admin/common/menu/list.ejs
+++ b/client/views/admin/common/menu/list.ejs
@@ -1,6 +1,7 @@
 <div class="nav flex-column">
     <%- include("./item.ejs", {content: "Home", icon: "fa-solid fa-house", link: "/admin/home" }) %> 
     <%- include("./item.ejs", {content: "About Us", icon: "fa-solid fa-building", link: "/admin/aboutus" }) %> 
+    <%- include("./item.ejs", {content: "Product", icon: "fa-solid fa-diagram-project", link: "/admin/product"}) %>
     <%- include("./item.ejs", {content: "Chat", icon: "fa-brands fa-rocketchat", link: "#"}) %>
     <%- include("./item.ejs", {content: "Blog", icon: "fa-solid fa-pen-to-square", link: "/admin/blog"}) %>
 </div>
