--- a/client/views/admin/customer/edit/index.ejs
+++ b/client/views/admin/customer/edit/index.ejs
@@ -2,8 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <%- include("../../common/menu/index.ejs") %>
-            <%- include ("./content/index.ejs") %> 
+            <%- include ("./content/index.ejs", customer) %> 
         </div> 
     </div>
-    <script src="/javascript/admin/index.js"></script>
 <%- include("../../tail/tail.ejs") %>  
